Tidy, docs and workaround dupe stylesheet reference

--- a/shared/web_components/gaia-header/index.html
+++ b/shared/web_components/gaia-header/index.html
@@ -5,8 +5,6 @@
 
   <title>Header Demo</title>
   <meta name="description" content="Demo app for Custom Element based headers">
-
-  <link rel="stylesheet" href="../../style/headers.css">
   <style type="text/css">
     html, body {
       margin: 0;
@@ -32,8 +30,7 @@
       <header id="header">
         <button id="action-button"><span id="action-button-inner" class="icon"></span></button>
         <menu id="menu-buttons" type="toolbar">
-          <content id="buttons-content" select="button,a">
-          </content>
+          <content id="buttons-content" select="button,a"></content>
         </menu>
         <content select="h1,h2,h3,h4"></content>
         <content id="content"></content>
